# OTAExp

./: .editorconfig  .gitattributes  .gitignore  .lintstagedrc.js  .prettierrc.yaml  README.md  package.json  pnpm-lock.yaml
apps/OTAExp/: app.json  package.json
apps/OTAExp/android/: build.gradle  gradle.properties  settings.gradle
apps/OTAExp/android/app/: build.gradle
apps/OTAExp/android/app/src/main/: AndroidManifest.xml
apps/OTAExp/android/app/src/main/java/com/anonymous/OTAExp/: MainActivity.kt  MainApplication.kt
apps/OTAExp/android/app/src/main/res/values/: strings.xml
apps/OTAExp/ios/: Podfile  Podfile.properties.json
apps/OTAExp/ios/OTAExp/: Info.plist
apps/OTAExp/ios/OTAExp.xcodeproj/: project.pbxproj
apps/OTAExp/ios/OTAExp.xcodeproj/xcshareddata/xcschemes/: OTAExp.xcscheme
apps/OTAExp/src/app/: ota.tsx  scan.tsx
apps/OTAExp/src/components/: app-tabs.tsx  app-tabs.web.tsx
apps/OTAExp/src/services/ble/: ble-session.ts  index.ts
apps/OTAExp/src/services/ota/: ble-ota-client.ts  firmware-picker.ts  index.ts  permissions.ts
apps/hwt605-bt-pio/: package.json  platformio.ini
apps/hwt605-bt-pio/boards/: nologo_esp32c3_super_mini.json
apps/hwt605-bt-pio/src/: Device_Specification.h  SparkFun_BMP581_Arduino_Library.h  Waveshare_10Dof-D.cpp  main.cpp
libs/eslint-config/: .clang-format  .clang-format-objc  .eslintrc.cjs  clang-format-wrapper.sh  package.json  tsconfig.base.json  tsconfig.lib.cjs.json  tsconfig.lib.es.json  tsconfig.rn.json
libs/eslint-config/eslint/: base.js  react-native.js
libs/libota/: .eslintrc.cjs  LibOTAModule.podspec  package.json  react-native.config.js  tsconfig.json
libs/libota/cpp/: CMakeLists.txt
libs/libota/cpp/_codegen_android/: CMakeLists.txt  RTNLibOTA-generated.cpp  RTNLibOTA.h
libs/libota/cpp/_generated/: RTNLibOTAJSI-generated.cpp  RTNLibOTAJSI.h
libs/libota/cpp/common/: Base64.cpp  Base64.h  NativeLibOTAModule.cpp  NativeLibOTAModule.h  OtaEngine.cpp  OtaEngine.h
libs/libota/scripts/: codegen.ts  tsconfig.json  types.d.ts
libs/libota/ts/: NativeLibOTAModule.ts  index.ts
